<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    style="@style/AppTheme.RecipeCard"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation"
    card_view:cardMaxElevation="@dimen/card_max_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/recipe_image_view"
            style="@style/AppTheme.CardImage"
            android:contentDescription="@string/card_image_desc"
            android:transitionName="@string/recipe_image_transition_name" />

        <TextView
            android:id="@+id/card_title_text_view"
            style="@style/AppTheme.RecipeTitle"
            android:transitionName="@string/recipe_title_transition_name" />

        <TextView
            android:id="@+id/card_ingredients_line_text_view"
            style="@style/AppTheme.RecipeIngredientsCard" />

        <Button
            android:id="@+id/share_button"
            style="@style/AppTheme.ShareButton"
            android:text="@string/share"
            android:theme="@style/ShareButtonTheme" />

    </LinearLayout>

</android.support.v7.widget.CardView>
