<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class=".RecipeDetailsBinding">

        <variable
            name="recipe"
            type="com.example.android.fivewaystocookeggs.model.Recipe" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/recipe_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_image_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/card_image_desc"
                android:scaleType="centerCrop"
                android:transitionName="@string/recipe_image_transition_name" />

            <TextView
                android:id="@+id/recipe_title_text_view"
                style="@style/AppTheme.RecipeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{recipe.title}"
                android:transitionName="@string/recipe_title_transition_name" />

            <TextView
                android:id="@+id/recipe_ingredients_header"
                style="@style/AppTheme.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients" />

            <TextView
                android:id="@+id/recipe_ingredients_text_view"
                style="@style/AppTheme.NormalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{recipe.ingredients}" />

            <TextView
                android:id="@+id/how_to_text_view"
                style="@style/AppTheme.Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to" />

            <TextView
                android:id="@+id/recipe_details_text_view"
                style="@style/AppTheme.RecipeDetails"
                android:layout_width="match_parent"
                android:text="@{recipe.details}"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</layout>

